# stars

./: .mergify.yml  Cargo.toml  README.md  bacon.toml  gentoo-test.yml  opensuse-test.yml  stars.sh
.github/workflows/: test.yml
src/: args.rs  cargo.rs  common.rs  dpkg.rs  github.rs  gitlab.rs  homebrew.rs  logger.rs  main.rs  pacman.rs  persist.rs  portage.rs  registry.rs  tests.rs  utils.rs  yum.rs  zypper.rs
tests/gentoo/: Dockerfile  entrypoint.sh
tests/opensuse/: Dockerfile  entrypoint.sh
