[package]
name = "stars"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
argh = "0.1"
console = "0.15"
dialoguer = "0.9"
directories = "4.0"
indicatif = "0.16"
native-tls = "0.2"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
ureq = { version = "2.4", default-features = false, features = ["gzip", "native-tls", "json"] }
url = { version = "2.2", features = ["serde"] }
which = "4.2"
