[package]
name = "stars"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = ["rustls"]
native_tls = ["ureq/native-tls"]
rustls = ["ureq/tls"]

[dependencies]
argh = "0.1"
base64 = "0.13.0"
console = "0.15"
dialoguer = "0.9"
directories = "4.0"
indicatif = "0.16"
itertools = "0.10"
native-tls = { version = "0.2", optional = true }
once_cell = "1.9"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
ureq = { version = "2.4", default-features = false, features = ["gzip", "json"] }
url = { version = "2.2", features = ["serde"] }
which = "4.2"
