[package]
name = "stars"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = ["native_tls"]
native_tls = ["attohttpc/tls"]
rustls = ["attohttpc/rustls"]
openssl_vendored = ["openssl/vendored"]

[dependencies]
argh = "0.1"
attohttpc = { version = "0.19", default_features = false, features = ["compress", "json"] }
base64 = "0.13.0"
console = "0.15"
dialoguer = "0.10"
directories = "4.0"
indicatif = "0.16"
itertools = "0.10"
once_cell = "1.13"
openssl = { version = "0.10", optional = true }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
toml = "0.5"
url = { version = "2.2", features = ["serde"] }
urlencoding = "2.1"
which = "4.2"

[dev-dependencies]
maplit = "1.0"